--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@
                 document.getElementById('uploadFileInput').files = e.dataTransfer.files;
             });
             loadChatMessages();
-            switchTab('pending');
+            showIntroScreen();
             updateAverageScore();
         });
     </script>
