--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
         // ==========================================
 
         const appState = {
-            currentTab: 'pending',
+            currentTab: 'intro',
             activeTasks: JSON.parse(localStorage.getItem('activeTasks')) || [],
             scoringData: JSON.parse(localStorage.getItem('scoringData')) || [],
             driveNavigation: [],
