--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             padding: 22px 35px;
             cursor: pointer;
             transition: var(--transition-smooth);
-            border-bottom: 1px solid rgba(230, 230, 极0.15);
+            border-bottom: 1px solid rgba(230, 230, 0.15);
             position: relative;
             overflow: hidden;
         }
@@ -147,7 +147,7 @@
         .tab-text {
             position: relative;
             z-index: 1;
-            font-size: 极1.15rem;
+            font-size: 1.15rem;
         }
 
         .content-area {
@@ -206,7 +206,7 @@
             position: absolute;
             top: 0;
             left: -100%;
-            width: 极100%;
+            width: 100%;
             height: 100%;
             background: var(--gradient-primary);
             transition: var(--transition-smooth);
