--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             font-size: 2.8rem;
             font-weight: 300;
             cursor: pointer;
-            transition: var(--transition-smooth);
+            transition: var(--transition-smooth;
             font-family: 'Georgia', serif;
             letter-spacing: 3px;
             color: var(--color-text);
@@ -85,7 +85,7 @@
             padding: 22px 35px;
             cursor: pointer;
             transition: var(--transition-smooth);
-            border-bottom: 1px solid rgba(230, 230, 0.15);
+            border-bottom: 1px solid rgba(230, 230, 250, 0.15);
             position: relative;
             overflow: hidden;
         }
@@ -140,14 +140,14 @@
             align-items: center;
             min-height: 60vh;
             text-align: center;
-            background: rgba(138, 43, 226, 极0.12);
+            background: rgba(138, 43, 226, 0.12);
             border-radius: 25px;
             border: 2px solid rgba(230, 230, 250, 0.25);
             margin: auto;
         }
 
         .intro-screen h2 {
-            font-size: 2.7rem;
+            font-size: 极2.7rem;
             margin-bottom: 24px;
             color: #E6E6FA;
             font-weight: 500;
@@ -159,14 +159,14 @@
             font-size: 1.25rem;
             line-height: 1.8;
             opacity: 0.98;
-            max-width: 极600px;
+            max-width: 600px;
             margin: 0 auto;
             color: #fff;
         }
 
         .task-card, .mind-option, .drive-option {
             background: rgba(138, 43, 226, 0.25);
-            border: 2px solid rgba(230, 230, 250, 0.35);
+            border: 2px solid rgba(230, 230, 250, 极0.35);
             border-radius: 18px;
             padding: 25px;
             margin: 18px 0;
@@ -247,7 +247,7 @@
             transform: translateX(100%);
             transition: var(--transition-smooth);
             backdrop-filter: blur(15px);
-            border: 2px solid rgba(230, 230, 250, 0.35);
+            border: 2px solid rgba极(230, 230, 250, 0.35);
             z-index: 1000;
             font-size: 1.05rem;
         }
@@ -317,11 +317,10 @@
         // ==========================================
         // EASILY EDITABLE TEXT CONTENT - START
         // ==========================================
-        
         const PENDING_TASKS = [
             "I'll remember that he loves me, no matter what I do, for I am his submissive babygirl, his personal princess.",
             "I am going to try to keep up with my weekly passive task.",
-            "极I am going to try to keep up with whatever active tasks I have.",
+            "I am going to try to keep up with whatever active tasks I have.",
             "I'll remember that I can choose to do anything other than decided tasks too, or not do decided tasks, and that will be just okay."
         ];
 
@@ -362,13 +361,13 @@
                     "I will inform you at least two days this week that I am wearing my black vest with no bra underneath, and you can decide what you want to do with me then."
                 ],
                 "Mind-related": [
-                    "A healthy body begets a healthy mind. I will do ten push-ups with you on a video call at least three times this week.",
+                    "A healthy body begets a healthy mind极. I will do ten push-ups with you on a video call at least three times this week.",
                     "I know I look hot with my hair down. I will send you at least three separate videos throughout the week showing you that I am studying with my hair down.",
                     "Every night this week before going to bed, I am going to tell you what I like most about myself, and I would love it if you praised me for it too."
                 ],
                 "Other Passive Tasks": [
                     "I'll voluntarily learn how to truly talk like a submissive with you at least once every day this week, right here on this webpage.",
-                    "I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.",
+                    "极I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.",
                     "I'll write anything, anywhere, on my body to confirm my willingness to obey you, and show you suitable proof of it, thrice this week."
                 ],
                 "Starting Clothed": [
@@ -377,7 +376,7 @@
                     "I'll begin wearing a towel covering my breasts and pussy and my hair tied up: I will first lower the towel to release my breasts, smile at you, and then let my hair down."
                 ],
                 "Starting Nude": [
-                    "Please let me be naked on video for you极, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you.",
+                    "Please let me be naked on video for you, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you.",
                     "I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!",
                     "I would love to role-play an Instagram vlogger and give you a nice introduction to all the various spots of interest on my body, and hope to draw your attention to each."
                 ],
@@ -387,14 +386,14 @@
                     "I'll start out naked, pull up a chair and sit in it, and then wear my pendant in front of you. I'll stand back up and then give you a little twirl so you can appreciate every inch of me."
                 ],
                 "Object-interaction": [
-                    "I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between.",
+                    "I'll strip down completely, and take a pic of me sitting极 in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between.",
                     "Since you love teaching me, maybe I can take a mirror selfie with a book held up to my face, my hair down, wearing nothing but panties, and every other inch of me on display for you",
                     ""
                 ],
                 "Accessories": [
                     "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
                     "A simple nude front profile mirror selfie, standing with a foot planted in front of the other, one hand loosely covering my pussy, wearing nothing but my college ID card.",
-                    "I'll put on any earrings极 I can find, turn my head slightly to show them to you, while clicking a mirror selfie wearing nothing but my panties, pulled down to my thighs, legs close together and one foot slightly in front of the other."
+                    "I'll put on any earrings I can find, turn my head slightly to show them to you, while clicking a mirror selfie wearing nothing but my panties, pulled down to my thighs, legs close together and one foot slightly in front of the other."
                 ],
                 "Special Submissive": [
                     "Maybe I'll take a simple nude of me kneeling with my hair in a single braid and in front of me, my eyes lowered, a playful smile on my lips, my hands behind me even as i thrust my chest out for you?",
@@ -414,7 +413,7 @@
             "I love seeing your progress and commitment.",
             "Remember to focus on your tasks and growth.",
             "Your obedience brings me great pleasure.",
-            "You're becoming exactly what I want you to be.",
+            "You're becoming exactly what极 I want you to be.",
             "I appreciate your honesty and openness.",
             "Continue to be the perfect submissive for me."
         ];
@@ -498,11 +497,11 @@
                 <h2 class="section-header">Hi, hottie. What do you want to do for me today?</h2>
                 ${MIND_OPTIONS.map(option => `
                     <div class="mind-option" onclick="handleMindClick('${option.replace(/'/g, "\\'")}')">
-                        <span style="position: relative; z-index: 1;">${极option}</span>
+                        <span style="position: relative; z-index: 1;">${option}</span>
                     </div>
                 `).join('')}
             `;
-            document.getElementById('contentArea').innerHTML = content;
+            document.getElementById('content极Area').innerHTML = content;
         }
 
         function showDriveOptions() {
@@ -531,15 +530,15 @@
                 content += DRIVE_OPTIONS.level2[level1Choice].map(option => `
                     <div class="drive-option" onclick="handleDriveClick('${option}', 2)">
                         <span style="position: relative; z-index: 1;">${option}</span>
-                    </极div>
+                    </div>
                 `).join('');
             } else if (appState.driveNavigation.length === 2) {
-                const level2Choice = app极State.driveNavigation[1];
-                content += DRIVE_OPTIONS.level3[level2Choice].map(option => `
+                const level2Choice = appState.driveNavigation[1];
+                content += DRIVE_OPTIONS.level3[level2Choice].map(option => option ? `
                     <div class="drive-option" onclick="handleDriveClick('${option.replace(/'/g, "\\'")}', 3)">
                         <span style="position: relative; z-index: 1;">${option}</span>
                     </div>
-                `).join('');
+                ` : '').join('');
             }
 
             document.getElementById('contentArea').innerHTML = content;
@@ -554,13 +553,17 @@
         }
 
         function handleDriveClick(option, level) {
-            if (level === 3) {
+            if (level === 1) {
+                appState.driveNavigation = [option];
+            } else if (level === 2) {
+                appState.driveNavigation = [appState.driveNavigation[0], option];
+            } else if (level === 3) {
                 showFloatingOutput(`Drive task chosen: ${option}`);
                 resetDriveNavigation();
             } else {
                 appState.driveNavigation.push(option);
-                showDriveOptions();
             }
+            showDriveOptions();
         }
 
         function resetDriveNavigation() {
