--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
             </div>
             <div class="tab" data-tab="scoring">
                 <span class="tab-text">Scoring📑</span>
-            </极div>
+            </div>
         </nav>
 
         <main class="content-area" id="contentArea">
