--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
         };
 
         const WEEKLY_TASKS = [
-            "As underwear, you are allowed to wear only bras on Monday, Wednesday, Thursday, and Saturday, and only panties every other day. Don't let me down. 😘"
+            "As underwear, you are allowed to wear only panties on Monday, Wednesday, Thursday, and Saturday. Don't let me down. 😘"
         ];
 
         
