--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <div class="tab active" data-tab="pending">
                 <span class="tab-text">Daily Affirmations💪🏼</span>
             </div>
-            <div class="tab" data极-tab="mind">
+            <div class="tab" data-tab="mind">
                 <span class="tab-text">What's on your mind?😏</span>
             </div>
             <div class="tab" data-tab="drive">
