--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 </div>` : '';
 
             let content = `
-                <h2 class="section-header">Let's focus on your growth, babygirl 🌱</h2>
+                <h2 class="section-header">Let's focus on your growth, babygirl.</h2>
                 ${breadcrumb}
             `;
 
@@ -680,7 +680,7 @@
                         <span style="position: relative; z-index: 1;">${option}</span>
                     </div>
                 `).join('');
-            } else if (appState.growth极Navigation.length === 1) {
+            } else if (appState.growthNavigation.length === 1) {
                 const level1Choice = appState.growthNavigation[0];
                 content += GROWTH_OPTIONS.level2[level1Choice].map(option => `
                     <div class="growth-option" onclick="handleGrowthClick('${option}', 2)">
