--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
         const GROWTH_OPTIONS = {
             level1: [
                 "Self-Care",
-                "Learning",
-                "Mindfulness"
+                "Studies",
+                "Submission"
             ],
             level2: {
                 "Self-Care": [
@@ -462,12 +462,12 @@
                     "Emotional Health",
                     "Social Health"
                 ],
-                "Learning": [
+                "Studies": [
                     "New Skills",
                     "Reading",
                     "Reflection"
                 ],
-                "Mindfulness": [
+                "Submission": [
                     "Meditation",
                     "Gratitude",
                     "Journaling"
@@ -510,7 +510,7 @@
                     "Practice mindful breathing."
                 ],
                 "Gratitude": [
-                    "极Write a thank you note to someone.",
+                    "Write a thank you note to someone.",
                     "List three things you appreciate.",
                     "Express gratitude out loud."
                 ],
