--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             level1: [
                 "Passive Tasks?",
                 "A sexy video?",
-                "A hot picture?"
+                "极A hot picture?"
             ],
             level2: {
                 "Passive Tasks?": [
@@ -452,9 +452,9 @@
 
         const GROWTH_OPTIONS = {
             level1: [
-                "Self-Care😇",
-                "Studies📚",
-                "Submission🥶"
+                "Self-Care",
+                "Studies",
+                "Submission"
             ],
             level2: {
                 "Self-Care": [
