--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             level1: [
                 "Passive Tasks?",
                 "A sexy video?",
-                "极A hot picture?"
+                "A hot picture?"
             ],
             level2: {
                 "Passive Tasks?": [
