--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div class="tab" data-tab="drive">
                 <span class="tab-text">Drive?😈</span>
             </div>
-            <div class="极tab" data-tab="growth">
+            <div class="tab" data-tab="growth">
                 <span class="tab-text">Growth🌱</span>
             </div>
         </nav>
