--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     "Every night this week before going to bed, I am going to tell you what I like most about myself, and I would love it if you praised me for it too."
                 ],
                 "Other Passive Tasks": [
-                    "I'll voluntarily learn how to truly talk like a submissive with you at least once every day this week极, right here on this webpage.",
+                    "I'll voluntarily learn how to truly talk like a submissive with you at least once every day this week, right here on this webpage.",
                     "I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.",
                     "I'll write anything, anywhere, on my body to confirm my willingness to obey you, and show you suitable proof of it, thrice this week."
                 ],
