--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             flex: 1;
             max-width: 320px;
             margin: 0 25px;
-            font-size: 1.极15rem;
+            font-size: 1.15rem;
             padding: 20px 35px;
         }
 
