--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             transition: var(--transition-smooth);
             font-family: 'Georgia', serif;
             letter-spacing: 3px;
-            color: var(--极color-text);
+            color: var(--color-text);
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
             flex-grow: 1;
             text-align: center;
