--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: var(--color-background);
             color: var(--color-text);
-            height: 极100vh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             overflow: hidden;
